heroku dep first

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- <h1>Is it gLobal page</h1> -->
+  <!-- <app-todo></app-todo>  yahan kaam nahi krta h yh-->
   <app-root></app-root>
 </body>
 </html>
